--- a/public/style/montague.css
+++ b/public/style/montague.css
@@ -96,6 +96,24 @@
     z-index: 10;
 }
 
+@media (min-aspect-ratio: 3/2) {
+    #montague-wrapup {
+        margin-top: 0;
+    }
+}
+
+@media (min-aspect-ratio: 5/2) {
+    #montague-wrapup {
+        margin-top: 20vh;
+    }
+}
+
+@media (min-aspect-ratio: 3/1) {
+    #montague-wrapup {
+        margin-top: 40vh;
+    }
+}
+
 #buckets-wrapper {
     width: 100%;
     height: 40vh;
