--- a/public/style/statistical.css
+++ b/public/style/statistical.css
@@ -22,6 +22,30 @@
     z-index: 10;
 }
 
+@media (min-aspect-ratio: 1/1) {
+    #wrapup {
+        margin-top: 0;
+    }
+}
+
+@media (min-aspect-ratio: 2/1) {
+    #wrapup {
+        margin-top: 20vh;
+    }
+}
+
+@media (min-aspect-ratio: 5/2) {
+    #wrapup {
+        margin-top: 30vh;
+    }
+}
+
+@media (min-aspect-ratio: 3/1) {
+    #wrapup {
+        margin-top: 60vh;
+    }
+}
+
 #ca-map {
     width: 100%;
     position: relative;
